--- a/src/css/Instructor.css
+++ b/src/css/Instructor.css
@@ -155,6 +155,18 @@ body {
   @media (min-width: 768px) {
     #sidebar {
       transform: translateX(0);
+      position: fixed;
+   
+        width:280px;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: #f8f9fa;
+        box-shadow: 0 4px 24px rgba(0, 0, 0, 0.1);
+        z-index: 1000;
+        overflow: hidden;
+      
     }
  
     #burger .btn.btn-primary.d-md-none,
